# Health_Bridge_App

./: .gitignore  README.md  jest.config.js  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  turbo.json
.github/: auto-assign.yml  (+1 more)
healthbridge_genai/: .dockerignore  .gitignore  Dockerfile  README.md  n8n_appointment_api.py  pyproject.toml  report.md  requirements.txt  run_server.py  start_server.py  test_appointment_agent.py  test_chroma_db.py  test_n8n_integration.py
healthbridge_genai/docs/: RAG_INTEGRATION_GUIDE.md  gemini_requirements.txt
healthbridge_genai/rag-system/: data_models.py  rag_service.py  requirements.txt
healthbridge_genai/real_medical_db/15e7bf6a-5df3-464a-8702-765f6402a465/: index_metadata.pickle
healthbridge_genai/real_medical_db/cd7b01f5-7128-46d9-a598-87600c9e47cf/: index_metadata.pickle
healthbridge_genai/scripts/: index_real_knowledge.py  rag_integration_demo.py
healthbridge_genai/src/healthbridge_genai/: add_test_data.py  crew.py  crew_api.py  crew_service.py  crew_tasks_logic.py  deleted_land_chain.py  fastapi_rag_app.py  few_shot_examples.py  langchain_workflows.py  langchain_workflows1.py  last_draft_before_final.py  last_without_langchain.py  llama_embeddings.py  main.py  mcp_helpers.py  pyproject.toml  requirements.txt  test_n8n_tool.py  unified_chatbot.py  vectorstore.py  vectorstore_llama3.py  with_langchain_imp.py  with_login.py  working_api.py  working_with_memory.py
healthbridge_genai/tests/: run_tests.py  test_client.py  test_gemini_integration.py  test_index.html  test_real_medical_knowledge.py
(+247 files in other folders)
