[project]
name = "healthbridge_genai"
version = "0.1.0"
description = "healthbridge_genai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
healthbridge_genai = "healthbridge_genai.main:run"
run_crew = "healthbridge_genai.main:run"
train = "healthbridge_genai.main:train"
replay = "healthbridge_genai.main:replay"
test = "healthbridge_genai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
